# AMC-PII-Mask

./: .gitignore  OPTIMIZATION_NOTES.md  README.md  VERSION.txt  config.example.yaml  pyproject.toml  requirements.txt
pii_audio_masking_pipeline/: __init__.py  asr.py  audio_io.py  config.py  forced_alignment.py  manifest.py  pii_detection.py  pipeline.py  run.py  state.py  timestamp_mapping.py  utils.py  validation.py
scripts/: benchmark_matrix.py
tests/: test_audio_io_smoke.py  test_config_contract.py  test_file_level_batching.py  test_forced_alignment.py  test_model_major_schedule.py  test_multiasr_consensus.py  test_optimization_guards.py  test_pii_detection_rules.py  test_pipeline_fast_paths.py  test_pipeline_optimization.py  test_timestamp_mapping.py
